data/derived/fa15/progs/unify/prog2186.ml.out
Characters 382-393:
  | Trip(t,r,s)     -> (eval(t,x,y) mod 30.0) +. eval(r,x,y) mod eval(s,x,y);;
                        ^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
